apps/app1/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress-dev
spec:
  defaultBackend:
    service:
      name: app1-ingress-dev
      port:
        number: 80
